--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <button id="getprofilebutton">Get Profile</button>
             <button id="sendmessagebutton">Send Message</button>
         </div>
+        <div class="buttonrow">
+            <button id="getlink">test cc line nuxt</button>
+        </div>
     </div>
 
     <div id="profileinfo">
