test get params

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         
         <div class="buttonrow">
-            <button id="getlink">test cc line nuxt</button>
-            <button>Send Message   ccccc</button>
+            <button id="getlink1">test cc line nuxt</button>
+            <button id="getlink2">test line shop</button>
         </div>
     </div>
 
