test cache LIFF

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    dsfdsfdsf
+    test LIFF
     <div class="buttongroup">
         <div class="buttonrow">
             <button id="openwindowbutton">Open Window</button>
